--- a/sfcc/package.json
+++ b/sfcc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sfra",
+  "name": "sfcc",
   "version": "6.3.0",
   "description": "Storefront Reference Architecture",
   "main": "index.js",
